--- a/ui/dispform.ui
+++ b/ui/dispform.ui
@@ -268,6 +268,19 @@
     <string>TextLabel</string>
    </property>
   </widget>
+  <widget class="QToolButton" name="openListButton">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>90</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>...</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
