--- a/ui/userform.ui
+++ b/ui/userform.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>366</width>
-    <height>253</height>
+    <width>363</width>
+    <height>264</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -98,6 +98,19 @@
    </property>
    <property name="text">
     <string>Ответы</string>
+   </property>
+  </widget>
+  <widget class="QToolButton" name="openListButton">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>50</y>
+     <width>23</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>...</string>
    </property>
   </widget>
  </widget>
